# cg-hw2

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/lib/: Field.cpp  Field.h  Object.cpp  Object.h  RGBColor.cpp  RGBColor.h  SnowMan.cpp  SnowMan.h  StatusBoard.cpp  StatusBoard.h  User.cpp  User.h  Vector.cpp  Vector.h
